<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>OpenswanWidget</class>
 <widget class="QWidget" name="OpenswanWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>446</width>
    <height>300</height>
   </rect>
  </property>
  <layout class="QFormLayout" name="formLayout">
    <property name="verticalSpacing">
    <number>0</number>
    </property>
   <item row="0" column="0">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Gateway:</string>
     </property>
    </widget>
   </item>
   <item row="0" column="1">
    <widget class="QLineEdit" name="gateway"/>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="label_2">
     <property name="text">
      <string>Group name:</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QLineEdit" name="groupname"/>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>User password:</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="KLineEdit" name="userPassword">
       <property name="passwordMode">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="cbUsernamePasswordMode">
       <item>
        <property name="text">
         <string>Store</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Always Ask</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Not Required</string>
        </property>
       </item>
      </widget>
     </item>
    </layout>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="label_5">
     <property name="text">
      <string>Group password:</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="KLineEdit" name="groupPassword">
       <property name="passwordMode">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="cbGroupPasswordMode">
       <item>
        <property name="text">
         <string>Store</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Always Ask</string>
        </property>
       </item>
       <item>
        <property name="text">
         <string>Not Required</string>
        </property>
       </item>
      </widget>
     </item>
    </layout>
   </item>
   <item row="4" column="1">
    <widget class="QCheckBox" name="ckShowPasswords">
     <property name="text">
      <string>Show passwords</string>
     </property>
    </widget>
   </item>
   <item row="5" column="1">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>28</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="6" column="0">
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>User name:</string>
     </property>
    </widget>
   </item>
   <item row="6" column="1">
    <widget class="QLineEdit" name="username"/>
   </item>
   <item row="7" column="0">
    <widget class="QLabel" name="label_6">
     <property name="text">
      <string>Phase1 algorithms:</string>
     </property>
    </widget>
   </item>
   <item row="7" column="1">
    <widget class="QLineEdit" name="phase1"/>
   </item>
   <item row="8" column="0">
    <widget class="QLabel" name="label_7">
     <property name="text">
      <string>Phase2 algorithms:</string>
     </property>
    </widget>
   </item>
   <item row="8" column="1">
    <widget class="QLineEdit" name="phase2"/>
   </item>
   <item row="9" column="0">
    <widget class="QLabel" name="label_8">
     <property name="text">
      <string>Domain:</string>
     </property>
    </widget>
   </item>
   <item row="9" column="1">
    <widget class="QLineEdit" name="domain"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KLineEdit</class>
   <extends>QLineEdit</extends>
   <header>klineedit.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>gateway</tabstop>
  <tabstop>groupname</tabstop>
  <tabstop>userPassword</tabstop>
  <tabstop>cbUsernamePasswordMode</tabstop>
  <tabstop>groupPassword</tabstop>
  <tabstop>cbGroupPasswordMode</tabstop>
  <tabstop>ckShowPasswords</tabstop>
  <tabstop>username</tabstop>
  <tabstop>phase1</tabstop>
  <tabstop>phase2</tabstop>
  <tabstop>domain</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
